--- a/20251031213234.md
+++ b/20251031213234.md
@@ -1,1 +1,15 @@
-# GitHubに書庫を作成した
+# GitHubに書庫を新規作成（2025-10-31）
+
+[Repository](https://github.com/watanabe3tipapa/nb-vault)
+
+同期コマンドは
+```
+nb sync --remote origin
+```
+
+
+
+---
+
+
+
