--- a/20251031201643.md
+++ b/20251031201643.md
@@ -7,6 +7,41 @@ command
 nb new
 ```
 
+## nb new の説明
+
+`nb new` は新しいノートを作成するコマンドです。`nb add` のエイリアスで、引数なしで実行するとエディタで新しいノートを開き、引数を与えるとその内容でノートを作成します。
+
+例:
+- `nb new` : エディタで新しいノートを作成
+- `nb new "ノート内容"` : 指定した内容でノートを作成
+
+## nb の主要な使用例
+
+### ノート作成と管理
+- 新しいノートを作成: `nb add "今日のタスク"`
+- ノートを編集: `nb edit 1` (ID 1 のノートを編集)
+- ノートを表示: `nb show 1`
+- ノートを削除: `nb delete 1`
+
+### 検索と閲覧
+- ノートを検索: `nb search "キーワード"`
+- ノートをリスト: `nb ls`
+- ブラウズ: `nb browse` (ローカルウェブブラウザで開く)
+
+### ブックマーク
+- ブックマークを作成: `nb https://example.com`
+- ブックマークをリスト: `nb bookmark`
+- ブックマークを開く: `nb open 1`
+
+### ノートブック管理
+- ノートブックを切り替え: `nb use work`
+- 新しいノートブックを作成: `nb notebooks add work`
+
+### GitHub 同期
+- リモートを設定: `nb remote set https://github.com/user/repo.git`
+- 同期: `nb sync`
+
+これらの例で基本的な操作が可能です。詳細は `nb help` を参照してください。
 
 ---
 
