[nb] Edit: 20251031213234.md

--- a/20251031213234.md
+++ b/20251031213234.md
@@ -5,10 +5,16 @@
 [Repository](https://github.com/watanabe3tipapa/nb-vault)
 
 
-同期コマンドは
+同期コマンド(手動)は
 ```
 nb sync --remote origin
 ```
+
+自動同期設定は
+```
+nb set auto_sync
+```
+
 
 
 
