[nb] Edit: 20251031213234.md

--- a/20251031213234.md
+++ b/20251031213234.md
@@ -4,13 +4,16 @@
 
 [Repository](https://github.com/watanabe3tipapa/nb-vault)
 
+> このリポジトリはPrivateであるため手動同期となる
 
 同期コマンド(手動)は
 ```
 nb sync --remote origin
 ```
 
-自動同期設定は
+
+
+ちなみに自動同期設定は
 ```
 nb set auto_sync
 ```
