--- a/20251101095956.md
+++ b/20251101095956.md
@@ -1,5 +1,15 @@
-16
+# TEST
 
+## 書き込みテスト
+
+
+```
+pbpaste | nb add 
+```
+
+
+
+``` PlainText
 # create a new note in your text editor
 nb add
 
@@ -20,3 +30,4 @@ nb example:add "This is a note."
 
 # create a new note in the folder named "sample"
 nb add sample/
+```
